--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,7 @@ Temporary Items
 .mtj.tmp/
 
 # Package Files #
-*.jar
+#*.jar
 *.war
 *.nar
 *.ear
@@ -196,3 +196,8 @@ local.properties
 # .nfs files are created when an open file is removed but is still being accessed
 .nfs*
 
+.idea/artifacts/
+.idea/encodings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
